Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-136654

Building qtgraphs on mac fails with due to -Wcast-function-type-mismatch

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.9.1, 6.9.2, 6.10.0 Beta3
    • 6.9
    • Graphs: 2D
    • None
    • Apple clang version 17.0.0 (clang-1700.0.13.3)
      Target: arm64-apple-darwin24.4.0
      Thread model: posix
      InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin
    • macOS
    • 81ee13281 (dev), e9c151285 (6.9), 52b26aa02 (6.9.1)

      Buidling Qt Graphs (both 6.9 branch and dev branch) on a newly setup mac fails for me:

      /usr/bin/c++ -DGL_SILENCE_DEPRECATION -DGraphs_EXPORTS -DQT_ASCII_CAST_WARNINGS -DQT_BUILDING_QT -DQT_BUILD_GRAPHS_LIB -DQT_CONCURRENT_LIB -DQT_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_EXPLICIT_QFILE_CONSTRUCTION_FROM_PATH -DQT_GUI_LIB -DQT_MOC_COMPAT -DQT_NETWORK_LIB -DQT_NO_AS_CONST=1 -DQT_NO_CAST_TO_ASCII -DQT_NO_EXCEPTIONS -DQT_NO_FOREACH -DQT_NO_FOREACH=1 -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_QASCONST -DQT_NO_QEXCHANGE -DQT_NO_QSNPRINTF -DQT_NO_STD_FORMAT_SUPPORT -DQT_OPENGL_LIB -DQT_QMLINTEGRATION_LIB -DQT_QMLMETA_LIB -DQT_QMLMODELS_LIB -DQT_QMLWORKERSCRIPT_LIB -DQT_QML_LIB -DQT_QUICK3DRUNTIMERENDER_LIB -DQT_QUICK3DUTILS_LIB -DQT_QUICK3D_LIB -DQT_QUICKSHAPES_LIB -DQT_QUICK_LIB -DQT_SHADERTOOLS_LIB -DQT_STRICT_QLIST_ITERATORS -DQT_USE_QSTRINGBUILDER -DUSE_AREAGRAPH -DUSE_BARGRAPH -DUSE_LINEGRAPH -DUSE_PIEGRAPH -DUSE_POINTS -DUSE_SCATTERGRAPH -DUSE_SPLINEGRAPH -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -D_LIBCPP_HARDENING_MODE=_LIBCPP_HARDENING_MODE_EXTENSIVE -I/Users/kkoehne/dev/qt/6.9/build/qtgraphs/src/Graphs_autogen/include -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtGraphs -I/Users/kkoehne/dev/qt/6.9/build/qtbase/lib/QtGraphs.framework/Headers -I/Users/kkoehne/dev/qt/6.9/src/qtgraphs/src -I/Users/kkoehne/dev/qt/6.9/build/qtgraphs/src -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtGraphs/6.9.1 -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtGraphs/6.9.1/QtGraphs -I/Users/kkoehne/dev/qt/6.9/build/qtdeclarative/src/qml -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtQml/6.9.1 -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtQml/6.9.1/QtQml -I/Users/kkoehne/dev/qt/6.9/build/qtbase/src/corelib -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtCore/6.9.1 -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtCore/6.9.1/QtCore -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtCore -I/Users/kkoehne/dev/qt/6.9/build/qtbase/lib/QtCore.framework/Headers -I/Users/kkoehne/dev/qt/6.9/build/qtbase/mkspecs/macx-clang -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtQml -I/Users/kkoehne/dev/qt/6.9/build/qtbase/lib/QtQml.framework/Headers -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtQmlIntegration -I/Users/kkoehne/dev/qt/6.9/src/qtdeclarative/src/qmlintegration -I/Users/kkoehne/dev/qt/6.9/build/qtdeclarative/src/qmlintegration -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtNetwork -I/Users/kkoehne/dev/qt/6.9/build/qtbase/lib/QtNetwork.framework/Headers -I/Users/kkoehne/dev/qt/6.9/src/qtgraphs/src/common/theme/../utils -I/Users/kkoehne/dev/qt/6.9/src/qtgraphs/src/common -I/Users/kkoehne/dev/qt/6.9/src/qtgraphs/src/graphs3d/axis -I/Users/kkoehne/dev/qt/6.9/src/qtgraphs/src/graphs3d/data -I/Users/kkoehne/dev/qt/6.9/src/qtgraphs/src/graphs3d/engine -I/Users/kkoehne/dev/qt/6.9/src/qtgraphs/src/graphs3d/input -I/Users/kkoehne/dev/qt/6.9/src/qtgraphs/src/graphs3d/utils -I/Users/kkoehne/dev/qt/6.9/src/qtgraphs/src/graphs3d/qml -I/Users/kkoehne/dev/qt/6.9/src/qtgraphs/src/graphs3d/../common/utils -I/Users/kkoehne/dev/qt/6.9/src/qtgraphs/src/graphs2d/axis -I/Users/kkoehne/dev/qt/6.9/src/qtgraphs/src/graphs2d/qsgrenderer -I/Users/kkoehne/dev/qt/6.9/src/qtgraphs/src/graphs2d/animation -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtGui -I/Users/kkoehne/dev/qt/6.9/build/qtbase/lib/QtGui.framework/Headers -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtQuick -I/Users/kkoehne/dev/qt/6.9/build/qtbase/lib/QtQuick.framework/Headers -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtQmlMeta -I/Users/kkoehne/dev/qt/6.9/build/qtbase/lib/QtQmlMeta.framework/Headers -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtQmlModels -I/Users/kkoehne/dev/qt/6.9/build/qtbase/lib/QtQmlModels.framework/Headers -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtQmlWorkerScript -I/Users/kkoehne/dev/qt/6.9/build/qtbase/lib/QtQmlWorkerScript.framework/Headers -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtOpenGL -I/Users/kkoehne/dev/qt/6.9/build/qtbase/lib/QtOpenGL.framework/Headers -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtQuick3D -I/Users/kkoehne/dev/qt/6.9/build/qtbase/lib/QtQuick3D.framework/Headers -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtQuick3DRuntimeRender -I/Users/kkoehne/dev/qt/6.9/build/qtbase/lib/QtQuick3DRuntimeRender.framework/Headers -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtQuick3DUtils -I/Users/kkoehne/dev/qt/6.9/build/qtbase/lib/QtQuick3DUtils.framework/Headers -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtShaderTools -I/Users/kkoehne/dev/qt/6.9/build/qtbase/lib/QtShaderTools.framework/Headers -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtConcurrent -I/Users/kkoehne/dev/qt/6.9/build/qtbase/lib/QtConcurrent.framework/Headers -I/Users/kkoehne/dev/qt/6.9/build/qtdeclarative/src/quick -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtQuick/6.9.1 -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtQuick/6.9.1/QtQuick -I/Users/kkoehne/dev/qt/6.9/build/qtbase/src/gui -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtGui/6.9.1 -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtGui/6.9.1/QtGui -I/Users/kkoehne/dev/qt/6.9/build/qtdeclarative/src/qmlmodels -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtQmlModels/6.9.1 -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtQmlModels/6.9.1/QtQmlModels -I/Users/kkoehne/dev/qt/6.9/build/qtdeclarative/src/qmlmeta -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtQmlMeta/6.9.1 -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtQmlMeta/6.9.1/QtQmlMeta -I/Users/kkoehne/dev/qt/6.9/build/qtdeclarative/src/qmlworkerscript -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtQmlWorkerScript/6.9.1 -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtQmlWorkerScript/6.9.1/QtQmlWorkerScript -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtQuickShapes -I/Users/kkoehne/dev/qt/6.9/build/qtbase/lib/QtQuickShapes.framework/Headers -I/Users/kkoehne/dev/qt/6.9/build/qtdeclarative/src/quickshapes -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtQuickShapes/6.9.1 -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtQuickShapes/6.9.1/QtQuickShapes -I/Users/kkoehne/dev/qt/6.9/build/qtquick3d/src/quick3d -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtQuick3D/6.9.1 -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtQuick3D/6.9.1/QtQuick3D -I/Users/kkoehne/dev/qt/6.9/build/qtquick3d/src/runtimerender -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtQuick3DRuntimeRender/6.9.1 -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtQuick3DRuntimeRender/6.9.1/QtQuick3DRuntimeRender -I/Users/kkoehne/dev/qt/6.9/build/qtquick3d/src/utils -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtQuick3DUtils/6.9.1 -I/Users/kkoehne/dev/qt/6.9/build/qtbase/include/QtQuick3DUtils/6.9.1/QtQuick3DUtils -F/Users/kkoehne/dev/qt/6.9/build/qtbase/lib -g -std=gnu++17 -arch arm64 -mmacosx-version-min=12 -fPIC -fvisibility=hidden -fvisibility-inlines-hidden -Wall -Wextra -Werror "-Wno-error=#warnings" -Wno-error=deprecated-declarations -fapplication-extension -ftrivial-auto-var-init=pattern -fstack-protector-strong -fno-exceptions -Winvalid-pch -Xclang -include-pch -Xclang /Users/kkoehne/dev/qt/6.9/build/qtgraphs/src/CMakeFiles/Graphs.dir/cmake_pch.hxx.pch -Xclang -include -Xclang /Users/kkoehne/dev/qt/6.9/build/qtgraphs/src/CMakeFiles/Graphs.dir/cmake_pch.hxx -MD -MT qtgraphs/src/CMakeFiles/Graphs.dir/graphs3d/qml/qquickgraphsitem.cpp.o -MF qtgraphs/src/CMakeFiles/Graphs.dir/graphs3d/qml/qquickgraphsitem.cpp.o.d -o qtgraphs/src/CMakeFiles/Graphs.dir/graphs3d/qml/qquickgraphsitem.cpp.o -c /Users/kkoehne/dev/qt/6.9/src/qtgraphs/src/graphs3d/qml/qquickgraphsitem.cpp
      /Users/kkoehne/dev/qt/6.9/src/qtgraphs/src/graphs3d/qml/qquickgraphsitem.cpp:5303:31: error: cast from 'NativeResourceForIntegrationFunction' (aka 'void *(*)()') to 'EnableTouch' (aka 'void *(*)(QWindow *, bool)') converts to incompatible function type [-Werror,-Wcast-function-type-mismatch]
       5303 |     EnableTouch enableTouch = (EnableTouch) QGuiApplication::platformNativeInterface()
            |                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
       5304 |                                   ->nativeResourceFunctionForIntegration("registertouchwindow");
            |                                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      1 error generated.
      

        For Gerrit Dashboard: QTBUG-136654
        # Subject Branch Project Status CR V

            tokorpip Tomi Korpipää
            kkohne Kai Köhne
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes