Fix compilation error on macOS

Fixes: QTBUG-136654
Change-Id: I9d37edb53e91b7c78535c4a5cddb4a595580c293
Reviewed-by: Kai Köhne <kai.koehne@qt.io>
(cherry picked from commit 81ee13281c026d4645a223e337a2159e2c44fbf7)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit e9c15128567525f62f4086d25c14bca64f8e0449)